# COSC-3P98-Assigment-3

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  mangohud.sh  run.sh
include/: camera.h  config.h.in  particle_system.h  render.h  stb_image.h  texture.h  util.h
include/glad/: gl.h
include/high_perf/: gl_util.h
include/modes/: advanced.h  basic.h  high_perf.h
include/shaders/: fragment.frag  geometry.geom  physics.comp  sort.comp.glsl  vertex.vert
libs/: BLT.lib
libs/freeglut/libs/win32/: freeglut.lib  freeglut_static.lib
libs/freeglut/libs/win64/: freeglut_static.lib
readme/: references.bib  template_Report.aux  template_Report.bbl  template_Report.blg  template_Report.out  template_Report.tex  template_Report.toc
src/: main.cpp  texture.cpp
src/basic/: basic.cpp
src/high_perf/: gl_util.cpp  high_perf.cpp
src/modes/: advanced.cpp  basic.cpp
